fix: restore heading spacing in production build

--- a/src/components/Heading/Heading.module.scss
+++ b/src/components/Heading/Heading.module.scss
@@ -2,7 +2,6 @@
 @use "src/styles/mixins" as *;
 
 .Heading {
-    margin: 0;
     font-family: var(--font-family-heading);
     font-weight: 550;
     line-height: 1.2;
