--- a/src/components/Hero/Hero.module.scss
+++ b/src/components/Hero/Hero.module.scss
@@ -25,7 +25,11 @@
     }
 
     &__Title {
-        margin-bottom: 1.5rem;
+        margin-bottom: 1.875rem;
+
+        @include mobile {
+            margin-bottom: 1.5rem;
+        }
     }
 
     &__TitleAccent {
