--- a/src/components/SectionHeader/SectionHeader.module.scss
+++ b/src/components/SectionHeader/SectionHeader.module.scss
@@ -13,7 +13,7 @@
     }
 
     &__Title {
-        margin-bottom: 1rem;
+        margin-bottom: 1.25rem;
     }
 
     &__Description {
