--- a/src/components/Text/Text.module.scss
+++ b/src/components/Text/Text.module.scss
@@ -2,7 +2,6 @@
 @use 'src/styles/mixins' as *;
 
 .Text {
-    margin: 0;
     font-family: var(--font-family);
     line-height: 1.5;
 
